fixed spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,7 +177,7 @@ li {
 
   font-weight: 600;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 1%;
+  padding: 0.5%;
   font-size: 1.3em;
   display: flex;
   justify-content: center;
